add docker-filefor deployment